examples/test/testpolicy12608.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12608
  namespace: namespace253
spec:
  podSelector:
    matchLabels:
      key5: value34
      key40: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value8
      podSelector:
        matchLabels:
          key40: value33
          key17: value12
